2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* include/Makefile.am: Reflect having moved automake/.
	* shmsupp/Makefile.am: Reflect having moved automake/.
	* start/Makefile.am: Reflect having moved automake/.
	* startup/Makefile.am: Reflect having moved automake/.
	* tty/Makefile.am: Reflect having moved automake/.
	* wrapup/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-08-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 445/bsps
	* bsp_specs: Remove -D__embedded__ -Asystem(embedded) from cpp.
	Remove cpp, old_cpp (now unused).

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Add FreeBSD SYSCTL() sections for networking.

2003-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* shmsupp/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* start/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* startup/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* tty/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-12-19	Joel Sherrill <joel@OARcorp.com>

	* start/start.S: Per PR329 now compiles with GNU tools.
	* startup/linkcmds: New file.  Now almost links.

2002-12-19	Joel Sherrill <joel@OARcorp.com>

	* start/start.S: Per PR329 now compiles with GNU tools.

2002-12-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Fix broken preinstall-deps.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Use install-data-local to install startfile.
